# Squads

./: .gitignore  Cargo.toml  README.md  TODO.md  api.rs  app.json  auth.py  default.nix  e -i HEAD~2  emojies.json  flake.nix  main.rs  package-lock.json  package.json  package.nix  svelte.config.js
.cargo/: config.toml
New Folder/: api.rs
backend/: backend.mjs  backend_dev.mjs  config.json  tokens.json
bkps/: chat_message.rs  page_chat.rs
images/: links.txt
resources/: emojis.json  squads.desktop
src/: api.rs  api_types.rs  app.html  auth.rs  calling.rs  hooks.server.js  main.rs  main23.rs  pages.rs  parsing.rs  rnd.rs  style.rs  test.py  types.rs  utils.rs  websockets.rs
src-tauri/: Cargo.toml  tauri.conf.json  tokens.json
src-tauri/src/: main.rs  store.rs
src/auth_webview/: main.rs
src/components/: add_users.rs  cached_image.rs  chat_message.rs  chat_minimized_message.rs  conversation.rs  emoji_picker.rs  expanded_image.rs  horizontal_line.rs  message.rs  message_area.rs  message_area_team.rs  mod.rs  more_options.rs  navbar.rs  picture_and_status.rs  preview_message.rs  profile.rs  sidebar.rs  solve.py  start_chat.rs  styled_scrollbar.rs  toooltip.rs  vertical_line.rs
src/pages/: message.rs  mod.rs  navbar.rs  page_activity.rs  page_chat.rs  page_home.rs  page_login.rs  page_team.rs  viewport.rs
src/routes/: +layout.svelte  +page.svelte  app.js  navbar.svelte  viewportAction.js
src/routes/login/: +page.svelte
src/routes/styles/: .default.css.swo  .default.css.swp  default.css
src/routes/team/: +page.svelte
src/routes/team/[id]/: +page.svelte
src/routes/team/[id]/[topic]/: +page.svelte
src/widgets/: anchored_overlay.rs  centered_overlay.rs  circle.rs  click_area.rs  gif.rs  mod.rs  selectable_rich_text.rs  selectable_text.rs  viewport.rs
tokens/: tokens.json
