cargo-features = ["codegen-backend"]

[package]
name = "Squads"
version = "0.7.0"
edition = "2021"
default-run = "Squads"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
bytes = "1.10.0"
directories = "6.0.0"
gtk = "0.18.2"
iced = {version = "0.13.1", features = ["image", "svg", "advanced", "debug"] }
ipc-channel = "0.19.0"
markdown-it = "0.6.1"
rand = "0.9.0"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
scraper = "0.22.0"
serde = "1.0.218"
serde_json = "1.0.139"
sha2 = "0.10.8"
tao = "0.32.8"
unicode-properties = "0.1.3"
url = "2.5.4"
webbrowser = "1.0.3"
wry = "0.50.5"


[[bin]]
name = "Squads"
path = "src/main.rs"

[[bin]]
name = "auth_webview"
path = "src/auth_webview/main.rs"
