cargo-features = ["codegen-backend"]

[package]
name = "Squads"
version = "0.7.0"
edition = "2021"
default-run = "Squads"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.96"
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
base64 = "0.22.1"
bytes = "1.10.0"
directories = "6.0.0"
iced = {version = "0.13.1", features = ["image", "svg", "advanced", "debug", "tokio"] }
image = "0.25.6"
markdown-it = "0.6.1"
rand = "0.9.0"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
rustls = "0.23.25"
scraper = "0.22.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.44.2"
unicode-properties = "0.1.3"
url = "2.5.4"
urlencoding = "2.1.3"
webbrowser = "1.0.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

[dependencies.image_rs]
package = "image"
version = "0.24"
features = ["gif"]

[[bin]]
name = "Squads"
path = "src/main.rs"
